--- a/habit-tracker/package.json
+++ b/habit-tracker/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^28.1.4"
+    "@types/jest": "^28.1.4",
+    "react-test-renderer": "17.0.2"
   }
 }
